--- a/.github/workflows/ci-idris2-and-libs.yml
+++ b/.github/workflows/ci-idris2-and-libs.yml
@@ -172,10 +172,6 @@ jobs:
           make bootstrap
           make install
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
-      #- name: Make bootstrap folder readonly
-      #  run: chmod -R a-w bootstrap
-      #- name: Build from bootstrap
-      #  run: make bootstrap && make install
       - name: Artifact Bootstrapped Idris2
         uses: actions/upload-artifact@v4
         with:
@@ -228,11 +224,6 @@ jobs:
           brew install node
           brew install coreutils
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
-      #- name: Make bootstrap folder readonly
-      #  run: chmod -R a-w bootstrap
-      #- name: Build Idris 2 from bootstrap
-      #  run: make bootstrap && make install
-      #  shell: bash
       - name: Artifact Bootstrapped Idris2
         uses: actions/upload-artifact@v4
         with:
@@ -260,9 +251,9 @@ jobs:
           git config --global core.autocrlf false
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Get Chez Scheme
+      - name: Get Chez Scheme (v10.3.0)
         run: |
-          git clone --depth 1 --branch v9.5.8a https://github.com/cisco/ChezScheme
+          git clone --depth 1 --branch v10.3.0 https://github.com/cisco/ChezScheme
           c:\msys64\usr\bin\bash -l -c "pacman -S --noconfirm tar make mingw-w64-x86_64-gcc"
           echo "PWD=$(c:\msys64\usr\bin\cygpath -u $(pwd))" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       - name: Configure and Build Chez Scheme
@@ -389,8 +380,6 @@ jobs:
           make install
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
           chmod +x "$HOME/.idris2/bin/idris2" "$HOME/.idris2/bin/idris2_app/"*
-      #- name: Build self-hosted
-      #  run: make all IDRIS2_BOOT="idris2 -Werror" && make install
       - name: Test self-hosted
         run: make ci-ubuntu-test INTERACTIVE=''
 
@@ -442,9 +431,6 @@ jobs:
           brew install --overwrite python@3.12
           brew install node
           brew install coreutils
-      #- name: Build self-hosted
-      #  run: make all IDRIS2_BOOT="idris2 -Werror" && make install
-      #  shell: bash
       - name: Test self-hosted
         run: make ci-macos-test INTERACTIVE=''
         shell: bash
@@ -521,8 +507,6 @@ jobs:
           make install
           echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
           chmod +x "$HOME/.idris2/bin/idris2" "$HOME/.idris2/bin/idris2_app/"*
-      #- name: Build self-hosted from previous version
-      #  run: make all IDRIS2_BOOT="idris2 -Werror" && make install
       - name: Test self-hosted from previous version
         run: make ci-ubuntu-test INTERACTIVE=''
       - name: Artifact Idris2
@@ -552,9 +536,9 @@ jobs:
           echo "PWD=$(c:\msys64\usr\bin\cygpath -u $(pwd))" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Get Chez Scheme
+      - name: Get Chez Scheme (v10.3.0)
         run: |
-          git clone --depth 1 --branch v9.5.8a https://github.com/cisco/ChezScheme
+          git clone --depth 1 --branch v10.3.0 https://github.com/cisco/ChezScheme
           c:\msys64\usr\bin\bash -l -c "pacman -S --noconfirm tar make mingw-w64-x86_64-gcc"
           echo "PWD=$(c:\msys64\usr\bin\cygpath -u $(pwd))" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       - name: Configure and Build Chez Scheme
