--- a/.github/workflows/ci-idris2-and-libs.yml
+++ b/.github/workflows/ci-idris2-and-libs.yml
@@ -88,11 +88,24 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install build dependencies
+      - name: Install Chez Scheme dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y chezscheme
-          echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
+          sudo apt-get install -y libx11-dev libncurses-dev
+      - name: Build Chez Scheme (v10.3.0)
+        run: |
+          git clone --depth 1 --branch v10.3.0 https://github.com/cisco/ChezScheme
+          cd ChezScheme
+          ./configure --threads --prefix="$HOME/chez"
+          make
+          make install
+          cd ..
+      - name: Add Chez Scheme to PATH
+        run: |
+          echo "$HOME/chez/bin" >> "$GITHUB_PATH"
+      - name: Test Scheme
+        run: |
+          scheme --version
 
       # Get our hands on the released version either by using the cache
       # or by rebuilding it if necessary.
