Fixing ci-idris2-and-libs.yml.

--- a/.github/workflows/ci-idris2-and-libs.yml
+++ b/.github/workflows/ci-idris2-and-libs.yml
@@ -109,12 +109,12 @@ jobs:
 
       # Get our hands on the released version either by using the cache
       # or by rebuilding it if necessary.
-      - name: Cache Chez Previous Version
-        id: previous-version-cache
-        uses: actions/cache@v4
-        with:
-          path: Idris2-${{ env.IDRIS2_MINIMUM_COMPAT_VERSION }}
-          key: ${{ runner.os }}-idris2-bootstrapped-chez-${{ env.IDRIS2_MINIMUM_COMPAT_VERSION }}
+      #- name: Cache Chez Previous Version
+      #  id: previous-version-cache
+      #  uses: actions/cache@v4
+      #  with:
+      #    path: Idris2-${{ env.IDRIS2_MINIMUM_COMPAT_VERSION }}
+      #    key: ${{ runner.os }}-idris2-bootstrapped-chez-${{ env.IDRIS2_MINIMUM_COMPAT_VERSION }}
       #- name : Build previous version
       #  if: steps.previous-version-cache.outputs.cache-hit != 'true'
       #  run: |
@@ -128,14 +128,12 @@ jobs:
           wget "https://github.com/idris-lang/Idris2/archive/refs/tags/v$IDRIS2_MINIMUM_COMPAT_VERSION.tar.gz" -O "idris2-$IDRIS2_MINIMUM_COMPAT_VERSION.tgz"
           tar zxvf "idris2-$IDRIS2_MINIMUM_COMPAT_VERSION.tgz"
           cd "Idris2-$IDRIS2_MINIMUM_COMPAT_VERSION"
-          make bootstrap
-          make install
-          echo "$HOME/.idris2/bin" >> "$GITHUB_PATH"
 
       # Build the current version and save the installation.
-      #- name: Build current version
-      #  run: |
-      #    make && make install
+      - name: Build current version
+        run: |
+          make bootstrap
+          make install
       - name: Artifact Idris2 from previous version
         uses: actions/upload-artifact@v4
         with:
